--- a/WebFiles/login.html
+++ b/WebFiles/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE  html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Login Page</title>
@@ -6,7 +6,7 @@
 
 	<body>
 		<input id="username"> </input>
-		<input id="password"> </input>
+		<input type="password" id="password"> </input>
 		<button id="login">Login</button>
 	</body>
 
